--- a/src/common/Accordion.css
+++ b/src/common/Accordion.css
@@ -1,4 +1,3 @@
-/* Default styles for the accordion */
 .accordion {
   margin: 10px 0;
 }
@@ -31,28 +30,29 @@
   transform: rotate(180deg);
 }
 
-/* Mobile styles (max-width: 768px) */
 @media (max-width: 768px) {
+  /* Keep headers visible on mobile */
   .accordion-header {
-    flex-direction: column; /* Stack the header items vertically on mobile */
-    align-items: flex-start; /* Align the title and arrow to the left */
+    display: none;
   }
 
   .accordion-arrow {
-    display: none; /* Hide the arrow on mobile */
+    display: inline-block;
   }
 
+  /* Set all accordions open by default on mobile */
   .accordion-content {
-    margin-top: 10px; /* Add margin to the content */
+    display: block !important;
+    margin-top: 10px;
   }
 
   .accordion-title {
     font-size: 18px;
-    margin-bottom: 8px; /* Add space between the title and content */
+    margin-bottom: 8px;
   }
 
   .accordion-header:hover {
-    background-color: #f1f1f1; /* Keep the hover effect for mobile */
-    border-bottom: 2px solid transparent; /* No underline for hover */
+    background-color: #e1e1e1; /* Optional: Maintain hover effect */
+    border-bottom: 1px solid var(--text-color-secondary); /* Adjust border on hover */
   }
 }
