--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   --button-text-primary-lite: #f7f7f6;
   --button-text-secondary-lite: #1c1812;
 
-  --background-color-dark: #121212;
+  --background-color-dark: #1c1812;
   --background-color-secondary-dark: #34312b;
   --text-color-primary-dark: #f7f7f6;
   --text-color-secondary-dark: #aeadaa;
