--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -125,9 +125,41 @@
 }
 
 .story-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: start;
+  width: 100%;
+}
+
+.box {
   display: flex;
-  gap: 20px;
-  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.box1 {
+  grid-row: span 3;
+  justify-content: flex-start;
+}
+
+.box2 {
+  grid-column: 2;
+}
+
+.box3 {
+  grid-column: 2;
+}
+
+.box4 {
+  grid-column: 2;
+  justify-content: flex-start;
+  padding: 0;
 }
 
 .story-image {
@@ -137,23 +169,50 @@
 }
 
 .story-title {
+  justify-content: flex-start;
   font-size: 32px;
   font-family: Gluten;
   font-weight: 400;
+  text-align: left;
+  margin: 0;
+  padding: 0;
+  padding-top: 20px;
   color: var(--text-color-primary);
 }
 
 .story-content {
+  margin: 0;
+  padding: 0;
   font-size: 14px;
   font-weight: 400;
   color: var(--text-color-secondary);
   flex: 1;
+  text-align: left;
+}
+
+.story-container {
+  padding: 24px 10%;
+}
+
+.story-title-main {
+  display: none;
 }
 
 @media (max-width: 768px) {
+  .grid-container {
+    display: block;
+  }
+
+  .story-container {
+    padding: 24px 20px;
+  }
+  .featured-heading {
+    border-bottom: 1px solid var(--text-color-secondary);
+    padding-bottom: 10px;
+  }
+
   .story-section {
-    display: flex;
-    flex-direction: column;
+    border-bottom: 2px solid #000;
   }
 
   .story-title {
@@ -166,29 +225,47 @@
     width: 100%;
     height: 150px;
     margin-bottom: 10px;
+    padding: 0;
   }
 
   .story-content {
     font-size: 14px;
-    line-height: 1.5;
     text-align: left;
-    flex: 1;
+  }
+  .story-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
   }
 
-  .story-section > * {
+  .box2 {
+    flex: 0 0 100%;
     order: 1;
+    justify-content: flex-start;
+    padding-left: 60px;
   }
 
-  .story-title {
-    order: 0;
-  }
-
-  .story-button {
+  .box1,
+  .box3 {
+    flex: 0 0 40%;
     order: 2;
-    margin-top: 10px;
+    align-self: flex-start;
   }
-}
 
-.story-container {
-  padding: 24px 10%;
+  .box1 {
+    align-self: flex-start;
+    padding-left: 20px;
+  }
+
+  .box3 {
+    align-self: flex-start;
+    padding-top: 20px;
+  }
+
+  .box4 {
+    flex: 0 0 100%;
+    order: 3;
+    padding: 0 0 20px 0;
+    margin-left: 60px;
+  }
 }
