--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,47 +1,53 @@
 .container {
   display: flex;
   justify-content: space-between;
-  height: 40px;
-  margin: 10px 10%;
+  height: 56px;
+  padding: 8px 24px;
 }
 
 .about {
   display: flex;
-  gap: 10px;
+  flex: 6;
 }
 
 .logo {
-  padding-top: 10px;
   width: 71.63px;
   height: 40px;
 }
 
 .title {
   font-size: 20px;
+  font-weight: 400;
+  line-height: 17.65px;
   font-family: Gluten;
   color: var(--title-color);
 }
 
 .menu-items {
   display: flex;
+  justify-content: space-between;
+  flex: 4;
+  align-items: center;
+}
+
+.link-items {
+  display: flex;
   gap: 40px;
-  font-size: 16px;
-  color: var(--text-color-primary);
-  line-height: 24px;
-  padding-top: 10px;
 }
 
 .menu-link {
   text-decoration: none;
   position: relative;
   color: var(--text-color-primary);
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .menu-link::after {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 2px;
+  bottom: -2px;
   width: 0;
   height: 2px;
   background-color: var(--text-color-primary);
@@ -73,8 +79,8 @@
   }
 
   .logo {
-    width: 50px;
-    height: auto;
+    width: 57.3px;
+    height: 32px;
   }
 
   .hamburger-icon {
