--- a/src/common/Accordion.css
+++ b/src/common/Accordion.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px;
+  padding: 8px 0;
   cursor: pointer;
   font-size: 20px;
   font-weight: 400;
